# nandgame-sv

./: .gitignore  CMakeLists.txt  Lexer.hpp  Parser.cpp  Parser.hpp  README.md  main.cpp  push_d  sim_main.cpp
.ccls-cache/@@home@ssayin@nandgame-sv/: @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@posix_opt.h.blob  (+430 more)
.ccls-cache/@home@ssayin@nandgame-sv/: CodeGen.hpp  CodeGen.hpp.blob  Lexer.cpp  Lexer.cpp.blob  Lexer.hpp.blob  Parser.cpp  Parser.cpp.blob  Parser.hpp  Parser.hpp.blob  Token.hpp  Token.hpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer.h  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer.h.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Syms.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Syms.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Syms.h  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Syms.h.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Trace__0.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Trace__0.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Trace__0__Slow.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer__Trace__0__Slow.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root.h  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root.h.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_h2815c998__0.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_h2815c998__0.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_h2815c998__0__Slow.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_h2815c998__0__Slow.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_hc8fa58cb__0.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_hc8fa58cb__0.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_hc8fa58cb__0__Slow.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__DepSet_hc8fa58cb__0__Slow.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__Slow.cpp  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024root__Slow.cpp.blob  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024unit.h  build@CMakeFiles@nandgame-sv.dir@Vcomputer.dir@Vcomputer___024unit.h.blob  (+18 more)
design/: alu.sv  computer.sv  control.sv  counter.sv  flipflop.sv  ram.sv  ram_dw.sv  rom.sv  rom2.sv
emulator/: CMakeLists.txt  nandgame.ll  nandgame.yy
macros/depth1/: add  eq  (+12 more)
nandasm/: CMakeLists.txt  driver.cpp  driver.hpp  inst.hpp  lexer.hpp  lexer.ll  parser.yy
sim/: CMakeLists.txt  VPIObject.cpp  VPIObject.hpp  codegen.cpp  driver.cpp  driver.hpp  inst.hpp  interactive.cpp  lexer.hpp  lexer.ll  nandgame.ll  nandgame.yy  parser.yy
src/: combined_memory.sv  computer.sv  condition.sv  control.sv  counter.sv  defs.sv  inst_decoder.sv  mux2.sv  regst.sv  unary_alu.sv
(+4 files in other folders)
